# backend

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_config.py  init.py  main.py  models.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py  error_handlers.py  errors.py  middlewares.py  rbac_map.py  responses.py  security.py
app/db/: database.py
app/dependencies/: auth.py  code_generation.py  code_generators.py  code_genration_service.py  rbac.py  rbac_service.py  repositories.py  routers.py  services.py  session.py  utils.py
app/models/: __init__.py  arguments.py  attributes.py  base.py  classes.py  email_notifications.py  enums.py  interfaces.py  methods.py  models.py  permissions.py  projects.py  refresh_sessions.py  relations.py  role_permissions.py  roles.py  tiles.py  user_roles.py  users.py  windows.py
app/routers/: __init__.py  attributes.py  auth.py  classes.py  diagrams.py  health.py  interfaces.py  methods.py  projects.py  relations.py  users.py  windows.py
app/schemas/: __init__.py  arguments.py  attributes.py  auth.py  base.py  classes.py  errors.py  interfaces.py  methods.py  projects.py  relations.py  roles.py  tiles.py  users.py  windows.py
app/services/: arguments.py  attributes.py  auth.py  bootstrap.py  classes.py  code_generation.py  email.py  email_notifications.py  hasher.py  interfaces.py  jwt_service.py  methods.py  projects.py  rbac.py  refresh_session.py  relations.py  tiles.py  uml_graph_preloader.py  users.py  windows.py
app/templates/: templates_env.py
app/utils/: code_generater.py  code_generator.py  generator_factory.py  logger.py  repository.py  uml_analyzer.py
migrations/: env.py
migrations/versions/: 034a6646f935_.py  286dbd8b37dd_initial.py  2cd03542fe25_init.py  3050bc57f936_.py  3b2f1d8a9c7e_add_email_notifications.py  484e679e5ee5_.py  5acfd26f4ce5_new.py  5caee34e6cf9_update_relations_schema.py  (+6 more)
routers/: auth.py  pages.py
(+6 files in other folders)
